--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
     
+    <button type="button" id="my-btn" class="btn btn-primary">Click me!</button>
 
     <script type="text/javascript" src="js/script.js"></script>
 </body>
