--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     
     <button type="button" id="my-btn" class="btn btn-primary">Click me!</button>
 
+    <div id="my-result">
+        <ul id="my-list">
+
+        </ul>
+    </div>
+
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
