aggiunto parte estetica dell'output

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     
     <button type="button" id="my-btn" class="btn btn-primary">Click me!</button>
 
-    <div id="my-result">
-        <ul id="my-list">
+    <div class="container">
+        <ul id="my-list" class="row">
 
         </ul>
     </div>
