aggiunto piccole correzioni

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </head>
 <body>
     
-    <button type="button" id="my-btn" class="btn btn-primary">Click me!</button>
-
     <div class="container">
+        <h1 class="text-center text-uppercase fw-bold">Javascript Fizzbuzz</h1>
+        <button type="button" id="my-btn" class="btn btn-primary">Click me!</button>
+
         <ul id="my-list" class="row">
 
         </ul>
